--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -17,7 +17,7 @@
       <%= link_to 'Back', url_for(:back), class: 'btn btn-danger btn-large btn-wide btn-simple' %>
       <%= link_to new_classroom_path(school:@current_school), class: 'btn btn-warning btn-simple btn-large btn-wide' do %>
         <i class="fa fa-plus"></i>
-        <span>Add Your First Classroom</span>
+        <span>Add New Classroom</span>
       <% end %>
     </div>
   </div>
