#206  There is no limit of name length when create the new Classroom.

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -21,13 +21,13 @@
         <div class="form-group">
           <%= f.label :first_name, "First Name", class: "col-sm-4 control-label text-main" %>
           <div class="col-sm-8">
-            <%= f.text_field :first_name, placeholder: 'First Name', class: 'form-control' %>
+            <%= f.text_field :first_name,maxlength: 35, placeholder: 'First Name', class: 'form-control' %>
           </div>
         </div>
         <div class="form-group">
           <%= f.label :last_name, "Last Name", class: "col-sm-4 control-label text-main" %>
           <div class="col-sm-8">
-            <%= f.text_field :last_name, placeholder: 'Last Name', class: 'form-control' %>
+            <%= f.text_field :last_name, maxlength: 35, placeholder: 'Last Name', class: 'form-control' %>
           </div>
         </div>
         <div class="form-group">
