#212 :: fixed link for new bubble category button

--- a/app/views/bubble_categories/index.html.erb
+++ b/app/views/bubble_categories/index.html.erb
@@ -28,7 +28,7 @@
 
   <div class="row actions text-right">
     <div class="col-md-12">
-      <%= link_to new_bubble_path, class: 'btn btn-warning btn-simple btn-large' do %>
+      <%= link_to new_bubble_category_path, class: 'btn btn-warning btn-simple btn-large' do %>
         <i class="fa fa-plus"></i>
         <span>New Bubble Category</span>
       <% end %>
