#215 The letters aren't displayed in the "Age" row.

--- a/app/views/kids/_form.html.erb
+++ b/app/views/kids/_form.html.erb
@@ -87,7 +87,7 @@
         <div class="form-group">
           <%= f.label :age, "Age", class: "col-sm-4 control-label text-main" %>
           <div class="col-sm-8">
-            <%= f.text_field :age, placeholder: '10', class: 'form-control' %>
+            <%= f.text_field :age, placeholder: '10',type:'number', class: 'form-control' %>
           </div>
         </div>
         <div class="form-group">
