Change names length to 50

--- a/app/views/bubble_games/_form.html.erb
+++ b/app/views/bubble_games/_form.html.erb
@@ -48,21 +48,21 @@
         <div class="form-group">
           <%= f.label :skin, "Skin", class: "col-sm-4 control-label text-main" %>
           <div class="col-sm-8">
-            <%= f.text_field :skin, placeholder: 'Skin',maxlength: 35, class: 'form-control' %>
+            <%= f.text_field :skin, placeholder: 'Skin',maxlength: 50, class: 'form-control' %>
           </div>
         </div>
 
         <div class="form-group">
           <%= f.label :game_params, "Game Params", class: "col-sm-4 control-label text-main" %>
           <div class="col-sm-8">
-            <%= f.text_field :game_params, placeholder: 'Game Params',maxlength: 50, class: 'form-control' %>
+            <%= f.text_field :game_params, placeholder: 'Game Params', class: 'form-control' %>
           </div>
         </div>
 
         <div class="form-group">
           <%= f.label :scoring_params, "Scoring Params", class: "col-sm-4 control-label text-main" %>
           <div class="col-sm-8">
-            <%= f.text_field :scoring_params, placeholder: 'Scoring Params',maxlength: 50, class: 'form-control' %>
+            <%= f.text_field :scoring_params, placeholder: 'Scoring Params', class: 'form-control' %>
           </div>
         </div>
 
