--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,3 +52,4 @@ a, a:focus, a:hover, a:active {display:inline-block; text-decoration:none;}
 .v-middle {vertical-align:middle;}
 .form-vpad {padding-top:100px; padding-bottom:80px;}
 textarea {resize:none;}
+[type=password]{display: inline-block;}
