--- a/app/views/users/dashboard_classroom.html.erb
+++ b/app/views/users/dashboard_classroom.html.erb
@@ -136,7 +136,7 @@
         <tr class="text-center v-middle">
           <td class="minimal">
             <%= link_to kid do %>
-              <%= image_tag kid_avatar_for kid %>
+              <%= image_tag kid_avatar_for(kid: kid, size: 'small') %>
             <% end %>
           </td>
           <td>
