--- a/app/views/kids/index.html.erb
+++ b/app/views/kids/index.html.erb
@@ -82,7 +82,7 @@
         <tr class="text-center v-middle">
           <td class="minimal">
             <%= link_to kid do %>
-              <%= image_tag kid_avatar_for kid %>
+              <%= image_tag kid_avatar_for(kid: kid, size: 'small') %>
             <% end %>
           </td>
           <td><%= kid.full_name %></td>
