#230: Title on dropdowns are not in the middle of dropdown button

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -1,7 +1,7 @@
 $dd-toggle-padding: 10px;
 .dropdown {display:inline-block;
   > a {color:$color-inv;
-    > span {display:inline-block; vertical-align:middle;}
+    > span {display:inline-block; vertical-align:middle; margin-bottom:1px; margin-top:2px;}
   }
   &.simple {
     > a {padding-top:2px; padding-left:$dd-toggle-padding; padding-right:$dd-toggle-padding; background:$color-brand-fade; border-radius:10px;}
