#234 When user clicks on the "Remove" button in "Parent Information" row, there is not the notification “Are you sure?".

--- a/app/assets/stylesheets/bootstrap_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.scss
@@ -48,3 +48,4 @@
 .nav-pills.simple.bordered > li:only-child > a{border-radius: 26px;}
 
 .alert {padding-top: 5px; padding-bottom: 5px;}
+.modal-dialog.removeModal{margin-top: 20%;}
