#237 The name of the School isn't displayed.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,7 +49,7 @@
         <div class="form-group">
           <%= label_tag :name, "School", class: "col-sm-4 control-label text-main" %>
           <div class="col-sm-8">
-            <span class="form-control form-control-static"><%= @user.classroom.try(:school).try(:name) %></span>
+            <span class="form-control form-control-static"><%= @user.try(:school).try(:name) %></span>
           </div>
         </div>
       <% end %>
