#238 When the user clicks on the "Cancel" button, he proceeds to the "View Users" page.

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,7 +14,7 @@
 
 <div class="container">
   <%= form_for @user, url: @user.new_record? ? users_admin_index_path : users_admin_path, html: {class: 'form-horizontal form-classic form-vpad'} do |f| %>
-    <%= hidden_field_tag :url, url_for(:back) %>
+    <%= hidden_field_tag :url, params[:url] || users_admin_index_path %>
     <%= render 'shared/error_messages', :object => @user %>
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
@@ -54,7 +54,7 @@
       </div>
     </div>
     <div class="row text-center actions">
-      <%= link_to 'Cancel', url_for(:back), class: 'btn btn-large btn-warning btn-wide btn-simple' %>
+      <%= link_to 'Cancel', params[:url] || users_admin_index_path, class: 'btn btn-large btn-warning btn-wide btn-simple' %>
       <% if @user.persisted? %>
         <%= link_to 'Delete', users_admin_path(@user), method: :delete,  class: 'btn btn-danger btn-large btn-wide btn-simple' %>
         <%= f.submit 'Confirm', class: 'btn btn-info btn-large btn-wide btn-simple' %>
