--- a/app/views/users/dashboard_classroom.html.erb
+++ b/app/views/users/dashboard_classroom.html.erb
@@ -100,7 +100,7 @@
               <% end %>
             </td>
             <td class="minimal" style="padding-top:18px;">
-              <%= link_to 'Add Teacher', new_users_admin_path(classroom: @current_classroom, role: 'Teacher'), class:'btn btn-warning btn-simple' %>
+              <%= link_to 'Add Teacher', new_users_admin_path(classroom: @current_classroom, role: 'Teacher', url: dashboard_classroom_path), class:'btn btn-warning btn-simple' %>
             </td>
           <% end %>
           <td style="padding-top:19px;">
