#242 When the user clicks on the "Cancel" button, he proceeds to the "Classroms" page.

--- a/app/views/users/dashboard_classroom.html.erb
+++ b/app/views/users/dashboard_classroom.html.erb
@@ -109,7 +109,7 @@
           <td></td>
           <% if can? :create, Kid %>
             <td style="padding-top:13px;">
-              <%= link_to new_kid_path(classroom: @current_classroom), class: 'btn btn-info btn-simple btn-large btn-wide' do %>
+              <%= link_to new_kid_path(classroom: @current_classroom, url: dashboard_classroom_path), class: 'btn btn-info btn-simple btn-large btn-wide' do %>
                 <i class="fa fa-plus"></i>
                 <span>Add New Student</span>
               <% end %>
