--- a/app/views/kids/_form.html.erb
+++ b/app/views/kids/_form.html.erb
@@ -13,7 +13,7 @@
 </div>
 
 <%= form_for @kid, html: {class: 'form-horizontal form-classic form-vpad'} do |f| %>
-  <%= hidden_field_tag :url, url_for(:back) %>
+  <%= hidden_field_tag :url, params[:url] || kids_path %>
   <%= render 'shared/error_messages', object: @kid %>
   <div class="container">
     <div class="row">
@@ -122,7 +122,7 @@
           </div>
         </div>
         <div class="row text-center actions">
-          <%= link_to 'Cancel', dashboard_classroom_path(classroom: @kid.classroom.try(:id)), class: 'btn btn-large btn-warning btn-wide btn-simple' %>
+          <%= link_to 'Cancel', params[:url] || kids_path, class: 'btn btn-large btn-warning btn-wide btn-simple' %>
           <% if @kid.persisted? %>
             <%= link_to 'Delete', @kid, method: :delete,  class: 'btn btn-danger btn-large btn-wide btn-simple' %>
             <%= f.submit 'Confirm', class: 'btn btn-info btn-large btn-wide btn-simple' %>
