#241: When user creates bubble group manually, the categories are displayed incorrectly in the "Dashboard" Tab and in the report of students.

--- a/app/views/posets/_poset_field.html.erb
+++ b/app/views/posets/_poset_field.html.erb
@@ -14,7 +14,7 @@
           <li><a href="javascript:" data-id="<%= poset.id %>"><%= poset.name %></a></li>
         <% end %>
       </ul>
-      <%= f.hidden_field :backward_poset_id, value: bg_poset.try(:id) %>
+      <%= f.hidden_field "#{type}_poset_id", value: bg_poset.try(:id) %>
     </div>
   </div>
 </div>
