#249 When the user clicks on the "back" button, he proceeds to the Bubble Games page.

--- a/app/views/bubble_games/show.html.erb
+++ b/app/views/bubble_games/show.html.erb
@@ -47,7 +47,7 @@
 
   <div class="row actions text-right">
     <div class="col-md-12">
-      <%= link_to 'Back', bubble_games_path, class: 'btn btn-warning btn-simple btn-large btn-narrow' %>
+      <%= link_to 'Back', url_for(:back), class: 'btn btn-warning btn-simple btn-large btn-narrow' %>
       <%= link_to 'Edit', edit_bubble_game_path(@bubble_game), class: 'btn btn-warning btn-simple btn-large btn-narrow' %>
     </div>
   </div>
