--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,6 +45,7 @@ a, a:focus, a:hover, a:active {display:inline-block; text-decoration:none;}
 .font-xlarge {font-size:18px;}
 .font-xxlarge {font-size:22px;}
 .text-main {color:$color-main;}
+.text-brand {color:$color-brand-fade;}
 .text-info {color:$color-info;}
 .centered{text-align:center;}
 .righty{float:right;}
