--- a/app/views/kids/play.html.erb
+++ b/app/views/kids/play.html.erb
@@ -48,7 +48,7 @@
     <div class="row">
       <h2 class="text-center">Select a Bubble Group to play:</h2>
       <% @kid.available_bubble_groups.each do |bubble_group| %>
-        <div class="col-sm-4"> <%= link_to bubble_group.name, play_kid_path(@kid, bubble_group_id: bubble_group.id) %></div>
+        <div class="text-left"><%= link_to bubble_group.name, play_kid_path(@kid, bubble_group_id: bubble_group.id) %></div>
       <% end %>
     </div>
   <% end %>
