#256 :: add back url to edit kid page link

--- a/app/views/users/dashboard_classroom.html.erb
+++ b/app/views/users/dashboard_classroom.html.erb
@@ -158,7 +158,7 @@
           <% end %>
           <% if can? :edit, kid %>
             <td class="minimal">
-              <%= link_to 'Edit', edit_kid_path(kid), class: 'btn btn-warning btn-simple btn-extended' %>
+              <%= link_to 'Edit', edit_kid_path(kid, url: dashboard_classroom_path), class: 'btn btn-warning btn-simple btn-extended' %>
             </td>
           <% end %>
           <% if can? :destroy, kid %>
