#258 Truncate kids name in "Average Play Time per Kid", change length validation of kids and Parents

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -96,7 +96,7 @@
                 <ul class="list-unstyled">
                   <% item[:kids].each do |kid| %>
                     <li>
-                      <%= link_to kid.full_name, kid %>
+                      <%= link_to truncate(kid.full_name, length: 17), kid %>
                     </li>
                   <% end %>
                 </ul>
