--- a/app/views/kids/reports.html.erb
+++ b/app/views/kids/reports.html.erb
@@ -5,9 +5,16 @@
         <h4>Reports for <%= @kid.full_name %></h4>
       </div>
       <div class="pull-right">
-        <%= link_to download_report_kid_path(@kid), class: 'btn btn-info btn-large btn-simple' do %>
-          <i class="fa fa-print"></i>
-          <span> Print Report as PDF</span>
+        <% if params[:full_report] %>
+          <%= link_to download_report_kid_path(@kid,full_report: true), class: 'btn btn-info btn-large btn-simple' do %>
+            <i class="fa fa-print"></i>
+            <span> Print Report as PDF</span>
+          <% end %>
+        <% else %>
+          <%= link_to download_report_kid_path(@kid), class: 'btn btn-info btn-large btn-simple' do %>
+            <i class="fa fa-print"></i>
+            <span> Print Report as PDF</span>
+          <% end %>
         <% end %>
         <%= link_to 'Back to Classroom', dashboard_classroom_path(classroom:@kid.classroom.id), class: 'btn btn-warning btn-large btn-simple' unless current_user.parent? %>
       </div>
