--- a/app/views/kids/_form.html.erb
+++ b/app/views/kids/_form.html.erb
@@ -14,6 +14,8 @@
 
 <%= form_for @kid, html: {class: 'form-horizontal form-classic form-vpad'} do |f| %>
   <%= hidden_field_tag :url, params[:url] || kids_path %>
+  <%= hidden_field_tag :school, params[:school] %>
+  <h1><%= @current_school %></h1>
   <%= render 'shared/error_messages', object: @kid %>
   <div class="container">
     <div class="row">
